--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.2",
+        "graham-campbell/markdown": "^15.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-frontend-presets/tall": "^7.0",
         "laravel/framework": "^10.10",
